load-tests/proto3_test/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proto3-test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: bal.perf.test
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: proto3-test-svc
                port:
                  number: 9100
